# OStrich-filesystem

./: .gitignore  BlockManager.cpp  BlockManager.h  CMakeLists.txt  FakeDiskDriver.cpp  FakeDiskDriver.h  LogFilesysTest.cpp  LogManager.cpp  LogManager.h  LogRecord.cpp  Superblock.h  main.cpp
archive/: LogFilesysTest.cpp  LogManager.h  LogRecord.h  Segment.cpp  Segment.h  Superblock.cpp  Superblock.h
filesys/: BitmapManager.cpp  BitmapManager.h  Block.h  Directory.cpp  Directory.h  File.cpp  File.h  FileSystem.cpp  FileSystem.h  InodeTable.cpp  InodeTable.h  LogManager.cpp  LogManager.h  LogRecord.h  fs_requests.cpp  fs_requests.h
interface/: BlockManager.cpp  BlockManager.h  FakeDiskDriver.cpp  FakeDiskDriver.h
tests/: test_fs.cpp
